namespace java thrift.test1

enum CandyType {
  OLD = 0,
  DELICIOUS = 1,
  WEIRD = 2
}

const string DEFAULT_ACCEPT_HEADER = "text/html, text/*"
